# opengl-study

./: .clang-format  .clang-tidy  .clang-tidy-ignore  .gitignore  CMakelists.txt  README.md
docs/: 00-contents.md  00-openg-intro.md  01-creating a window.md  01-rendering pipeline.md  02-3d transformation pipeline.md  03-creating a window.md  04-data handling.md  04-draw triangle.md  05-shader.md  06-camera.md  07-textures.md  08-lights.md  09-model.md  10-shadow map.md  A01-glfw gui event handler.md
gl-core/: CMakeLists.txt
gl-core/src/: glpch.h
gl-core/src/gl-core/: glpch.cpp  glpch.h
gl-core/src/gl-core/base/: exception.h  noncopyable.h  singleton.h  window.cpp  window.h
gl-core/src/gl-core/camera/: camera.cpp  camera.h
gl-core/src/gl-core/event/: event_dispatcher.h  gui_event.h  key_code.h  key_event.h  mouse_code.h  user_input.h
gl-core/src/gl-core/renderer/: buffer_layout.h  buffer_types.h  frame_buffer.cpp  index_buffer.cpp  index_buffer.h  light.cpp  light.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  raw_buffer.h  shadow_map.cpp  shadow_map.h  texture.cpp  texture.h  texture_image.cpp  texture_image.h  texture_specification.h  uniform_buffer.h  vertex_array.cpp  vertex_array.h  vertex_buffer.cpp  vertex_buffer.h
gl-core/src/gl-core/shader/: shader.cpp  shader.h
gl-core/src/gl-core/util/: event_dispatcher.h  string_tools.h
gl-sandbox/: CMakeLists.txt
gl-sandbox/assets/models/: luke.3DS  luke.fbx  luke.mb  luke.mtl
gl-sandbox/assets/shaders/: ambient_light.glsl  basic.glsl  directional_light_shadow.glsl  example1.glsl  phong_light.glsl
gl-sandbox/src/: gl-sandbox.cpp
tests/: CMakeLists.txt
tests/gl-core/: test_gui_event.cpp
